[tool.poetry]
name = "s3-browser"
version = "0.1.0"
description = ""
authors = ["Roman Zydyk <romanzdk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
boto3 = "^1.34.95"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
